--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
-theme: jekyll-theme-cayman
+name: "Matthew H. Futia"
+navbar:
+  title: "My Website"
+  left:
+    - text: "Home"
+      href: index.html
+    - text: "About"
+      href: about.html
